# chaos

./: pyproject.toml  run_analyze.py
app/: cli.py  config.py
app/processors/: gpt_agent.py
app/tasks/: freshdesk_pipeline.py
outputs/freshdesk/: raw_tickets.json
