[project]
name = "chaos-harvester"
version = "0.1.0"
description = "Analyse automatisée de données issues du chaos (Freshdesk, tendances, forums...)"
authors = [
  { name = "Antho", email = "christodoulou75@protonmail.com" }
]
dependencies = [
  "typer[all]",
  "openai>=1.0.0",
  "pydantic>=1.10,<3.0",
  "requests"
]
requires-python = ">=3.10"

[project.scripts]
harvester = "app.cli:app"
